test/types/records/const-checking/todo-duplicate-cannotassign-error.good
todo-duplicate-cannotassign-error.chpl:8: error: cannot assign to a record of the type REC using the default assignment operator because it has 'const' field(s)
